--- a/conf/www.conf
+++ b/conf/www.conf
@@ -124,22 +124,22 @@ pm = dynamic
 ; forget to tweak pm.* to fit your needs.
 ; Note: Used when pm is set to 'static', 'dynamic' or 'ondemand'
 ; Note: This value is mandatory.
-pm.max_children = 5
+pm.max_children = 50
 
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
 ; Default Value: (min_spare_servers + max_spare_servers) / 2
-pm.start_servers = 2
+pm.start_servers = 5
 
 ; The desired minimum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
 ; Note: Mandatory when pm is set to 'dynamic'
-pm.min_spare_servers = 1
+pm.min_spare_servers =5
 
 ; The desired maximum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
 ; Note: Mandatory when pm is set to 'dynamic'
-pm.max_spare_servers = 3
+pm.max_spare_servers = 20
 
 ; The number of rate to spawn child processes at once.
 ; Note: Used only when pm is set to 'dynamic'
@@ -490,3 +490,4 @@ clear_env = no
 php_admin_value[memory_limit] = 512M
 php_admin_value[upload_max_filesize] = 2048M
 php_admin_value[post_max_size] = 40968M
+php_admin_value[disable_functions] = opcache_get_configuration,opcache_get_status
