--- a/conf/php-fpm/www.conf
+++ b/conf/php-fpm/www.conf
@@ -1,15 +1,11 @@
 [www]
-
 user = {{USERNAME}}
 group = {{USERNAME}}
 
-
-# listen = /run/php/php8.2-fpm.sock
-# e.g. /home/USER/run/php8.2-fpm.sock
 listen = {{SOCKFILE}}
 listen.owner = {{USERNAME}}
 listen.group = {{USERNAME}}
-
+listen.mode = 0660
 
 pm = dynamic
 pm.max_children = 50
@@ -17,19 +13,23 @@ pm.start_servers = 5
 pm.min_spare_servers = 5
 pm.max_spare_servers = 20
 
-; the current environment.
-; Default Value: clean env
-;env[HOSTNAME] = $HOSTNAME
-;env[PATH] = /usr/local/bin:/usr/bin:/bin
-;env[TMP] = /tmp
-;env[TMPDIR] = /tmp
-;env[TEMP] = /tmp
-
-
-;php_flag[display_errors] = off
-;php_admin_value[error_log] = /var/log/fpm-php.www.log
-;php_admin_flag[log_errors] = on
+; PHP Values
 php_admin_value[memory_limit] = 512M
 php_admin_value[upload_max_filesize] = 2048M
 php_admin_value[post_max_size] = 40968M
 php_admin_value[disable_functions] = opcache_get_configuration,opcache_get_status
+
+; Error Logging
+php_admin_flag[log_errors] = on
+php_admin_value[error_log] = /home/{{USERNAME}}/logs/php-error.log
+
+; Security Settings
+php_admin_flag[display_errors] = off
+php_admin_flag[expose_php] = off
+
+; Session Settings
+php_value[session.save_handler] = files
+php_value[session.save_path] = /home/{{USERNAME}}/tmp
+
+; Opcache Settings
+php_admin_value[opcache.restrict_api] = /home/{{USERNAME}}/public
