--- a/conf/supervisor/supervisord.conf
+++ b/conf/supervisor/supervisord.conf
@@ -5,10 +5,11 @@ chown={{USERNAME}}:{{USERNAME}}
 
 [supervisord]
 pidfile={{PIDFILE}}
-logfile={{LOGFILE}} 
+logfile={{SUPERVISOR_LOGFILE}}
 logfile_maxbytes=20MB
 logfile_backups=3
-childlogdir={{CHILDLOGDIR}}  
+childlogdir={{LOGS_DIR}}
+
 
 [supervisorctl]
 serverurl=unix://{{SOCKFILE}}
@@ -26,5 +27,6 @@ autorestart=true
 stopasgroup=true
 killasgroup=true
 redirect_stderr=true
-stdout_logfile={{LOGFILE}}
+stdout_logfile={{LOGS_DIR}}/{{PROGRAM_NAME}}.log
+stderr_logfile={{LOGS_DIR}}/{{PROGRAM_NAME}}-error.log
 stopwaitsecs=3600
